# minor_project

./: Cargo.toml  README.md
crates/deduper-cli/: Cargo.toml
crates/deduper-cli/src/: main.rs  progress.rs
crates/deduper-cli/src/cmd/: find.rs  quarantine.rs  recover.rs  scan.rs
crates/deduper-cli/tests/: cli_tests.rs
crates/deduper-cli/tests/common/: mod.rs
crates/deduper-engine/: Cargo.toml
crates/deduper-engine/src/: db.rs  filtering.rs  hashing.rs  lib.rs  quarantine.rs  report.rs
crates/deduper-engine/src/similarity/: image.rs  text.rs
crates/deduper-engine/tests/: engine_tests.rs
crates/deduper-engine/tests/common/: mod.rs
crates/deduper-utils/: Cargo.toml
crates/deduper-utils/src/: lib.rs
test-data/expected-outputs/: sample-report.json
test-data/sample-files/: duplicate.txt  text2.txt
