[workspace]
resolver = "2"
members = ["crates/deduper-cli", "crates/deduper-engine"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]

[workspace.dependencies]
# Runtime dependencies
rayon = "1.7"
walkdir = "2.3"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
blake3 = "1.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
hex = "0.4"
anyhow = "1.0"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

# Test dependencies
tempfile = "3.8"
assert_fs = "1.1"
predicates = "3.0"
serial_test = "3.0"
